--- a/.github/workflows/duckstation.yml
+++ b/.github/workflows/duckstation.yml
@@ -38,12 +38,27 @@ jobs:
           Move-Item -Path "duckstation-uwp-2024-03-09/*" -Destination "." -Force
           Remove-Item -Recurse -Force "duckstation-uwp-2024-03-09"
 
-      - name: Download and Extract Dependencies
+      - name: Download Dependencies
         run: |
           echo "Downloading dependencies..."
           curl -L -o deps-x64.7z https://github.com/stenzek/duckstation-ext-qt-minimal/releases/download/latest/deps-x64.7z
+          if (Test-Path -Path "deps-x64.7z") {
+            echo "Dependencies downloaded successfully."
+          } else {
+            Write-Error "Failed to download dependencies."
+          }
+        shell: pwsh
+
+      - name: Extract Dependencies
+        run: |
           echo "Extracting dependencies..."
           7z x deps-x64.7z -odep/msvc/deps-x64
+          if (Test-Path -Path "dep/msvc/deps-x64/bin/rcc.exe") {
+            echo "Dependencies extracted successfully."
+          } else {
+            Write-Error "Failed to extract dependencies."
+          }
+        shell: pwsh
 
       - name: List Extracted Dependencies
         run: |
@@ -119,7 +134,7 @@ jobs:
             exit 1
           }
         shell: pwsh
-       
+         
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
         with:
