--- a/.github/workflows/duckstation.yml
+++ b/.github/workflows/duckstation.yml
@@ -21,11 +21,12 @@ jobs:
       Platform: x64
       Configuration: ReleaseUWP
       BuildMode: SideLoadOnly
-      AppxBundle: Never      
+      AppxBundle: Never
       ProjectPath: src/duckstation-uwp
       ProjectDirectory: src/duckstation-uwp
       PackageOutputRootDir: C:\AppPackage
       PackageOutputDir: DuckStation
+      SDLPath: D:\a\duckstation-uwp\duckstation-uwp\SDL2
 
     steps:
       - name: Add msbuild to PATH
@@ -42,6 +43,28 @@ jobs:
           Expand-Archive -Path repo.zip -DestinationPath .
           Move-Item -Path "duckstation-uwp-2024-03-09/*" -Destination "." -Force
           Remove-Item -Recurse -Force "duckstation-uwp-2024-03-09"
+
+      - name: Download SDL
+        run: |
+          echo "Downloading SDL..."
+          wget https://www.libsdl.org/release/SDL2-devel-2.0.14-VC.zip -O SDL2.zip
+          if (Test-Path -Path "SDL2.zip") {
+            echo "SDL downloaded successfully."
+          } else {
+            Write-Error "Failed to download SDL."
+          }
+        shell: pwsh
+
+      - name: Extract SDL
+        run: |
+          echo "Extracting SDL..."
+          Expand-Archive -Path SDL2.zip -DestinationPath SDL2
+          if (Test-Path -Path "$env:SDLPath/include/SDL.h") {
+            echo "SDL extracted successfully."
+          } else {
+            Write-Error "Failed to extract SDL."
+          }
+        shell: pwsh
 
       - name: Download Dependencies
         run: |
@@ -82,6 +105,7 @@ jobs:
           echo "ProjectDirectory: $env:ProjectDirectory"
           echo "PackageOutputRootDir: $env:PackageOutputRootDir"
           echo "PackageOutputDir: $env:PackageOutputDir"
+          echo "SDLPath: $env:SDLPath"
         shell: pwsh
 
       - name: Generate Self-Signed Certificate
@@ -107,6 +131,8 @@ jobs:
             /p:Platform=$env:Platform `
             /p:Configuration=$env:Configuration `
             /p:PlatformToolset=v143 `
+            /p:IncludePath="$env:SDLPath/include;$(IncludePath)" `
+            /p:LibraryPath="$env:SDLPath/lib/x64;$(LibraryPath)" `
             /p:UapAppxPackageBuildMode=$env:BuildMode `
             /p:AppxBundle=$env:AppxBundle `
             /p:PackageCertificateThumbprint="${{ env.THUMBPRINT }}" `
