--- a/.github/workflows/duckstation.yml
+++ b/.github/workflows/duckstation.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
         with:
+          ref: e080c27
           submodules: true
 
       - name: Add msbuild to PATH
