--- a/.github/workflows/duckstation.yml
+++ b/.github/workflows/duckstation.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
         with:
-          ref: refs/heads/main
+          ref: refs/heads/uwp
           submodules: true
 
       - name: Checkout Specific Commit
