--- a/.github/workflows/duckstation.yml
+++ b/.github/workflows/duckstation.yml
@@ -41,16 +41,10 @@ jobs:
 
       - name: Download and Extract Repository
         run: |
-          gdown https://drive.google.com/uc?id=1XgYr7dQPSVjjA-agObnpwO2XI13qZgxh -O repo.zip
+          gdown https://drive.google.com/uc?export=download&id=1XqjzqPmKe7hlCKRudLUiERst2IIXqcXe -O repo.zip
           Expand-Archive -Path repo.zip -DestinationPath .
           Move-Item -Path "duckstation-uwp/*" -Destination "." -Force
           Remove-Item -Recurse -Force "duckstation-uwp"
-        shell: pwsh
-
-      - name: Download and Extract Dependencies Pack
-        run: |
-          wget https://github.com/stenzek/duckstation-ext-qt-minimal/releases/download/latest/deps-x64.7z
-          7z x deps-x64.7z -odep/msvc
         shell: pwsh
 
       - name: Add msbuild to PATH
