--- a/.github/workflows/duckstation.yml
+++ b/.github/workflows/duckstation.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Download and Extract Repository
         run: |
-          gdown https://drive.google.com/uc?export=download&id=1XqjzqPmKe7hlCKRudLUiERst2IIXqcXe -O repo.zip
+          gdown https://drive.google.com/uc?id=1XqjzqPmKe7hlCKRudLUiERst2IIXqcXe -O repo.zip
           Expand-Archive -Path repo.zip -DestinationPath .
           Move-Item -Path "duckstation-uwp/*" -Destination "." -Force
           Remove-Item -Recurse -Force "duckstation-uwp"
